# Next

./: .180088743_7897716735_2294266832  .gitignore  .next  CMakeLists.txt  Makefile  README.md  Specs_of_names.md  env  history.json  next  next-install.sh  next.json  next.py  setup.py
.next/: next
assets/: CMakeLists.txt  CMakeListsMoon.txt  Makefile  main.cpp  next.json  test.cpp  version
assets/.next/: colors.mk  config.mk  funcs_compile.mk  print.mk
assets/empty-project/: config.yaml
assets/empty_executable/cmake/: linux.cmake
assets/empty_library/cmake/: linux.cmake  windows.cmake
assets/new_project_cpp/: conf.json
cmake/: picoJSON.cmake  termcolor.cmake  vendor.cmake
doc/html/: annotated.html  build__command_8hpp.html  build__command_8hpp__dep__incl.dot  build__command_8hpp__incl.dot  build__command_8hpp_source.html  class_build_command-members.html  class_build_command.html  class_build_command__coll__graph.dot  class_command_base-members.html  class_command_base.html  class_command_base__inherit__graph.dot  class_create_project_command-members.html  class_create_project_command.html  class_create_project_command__inherit__graph.dot  class_import_command-members.html  class_import_command.html  class_import_command__inherit__graph.dot  class_m_create_project_command-members.html  class_m_create_project_command.html  class_m_create_project_command__coll__graph.dot  class_manager_command-members.html  class_manager_command.html  class_manager_command_a85c3d8e55230a60728f14a6c2c33e117_cgraph.dot  class_next_data-members.html  class_next_data.html  class_path_command-members.html  class_path_command.html  class_path_command__coll__graph.dot  class_read_help_command-members.html  class_read_help_command.html  class_read_help_command__inherit__graph.dot  class_run_command-members.html  class_run_command.html  class_run_command__inherit__graph.dot  class_stack_command-members.html  class_stack_command.html  class_stack_command_aed754e72b95d59f33c2688320a306c32_icgraph.dot  class_upgrade_command-members.html  class_upgrade_command.html  class_upgrade_command__inherit__graph.dot  (+71 more)
doc/latex/: annotated.tex  build__command_8hpp.tex  build__command_8hpp__dep__incl.dot  build__command_8hpp__incl.dot  class_build_command.tex  class_build_command__coll__graph.dot  class_command_base.tex  class_command_base__inherit__graph.dot  class_create_project_command.tex  class_create_project_command__inherit__graph.dot  class_import_command.tex  class_import_command__inherit__graph.dot  class_m_create_project_command.tex  class_m_create_project_command__coll__graph.dot  class_manager_command.tex  class_manager_command_a85c3d8e55230a60728f14a6c2c33e117_cgraph.dot  class_next_data.tex  class_path_command.tex  class_path_command__inherit__graph.dot  class_read_help_command.tex  class_read_help_command__inherit__graph.dot  class_run_command.tex  class_run_command__inherit__graph.dot  class_stack_command.tex  class_stack_command_aed754e72b95d59f33c2688320a306c32_icgraph.dot  class_upgrade_command.tex  class_upgrade_command__coll__graph.dot  class_version_command.tex  class_version_command__coll__graph.dot  command__base_8hpp.tex  command__base_8hpp.tex.tmp  command__base_8hpp__dep__incl.dot  command__base_8hpp__incl.dot  create__project__command_8hpp.tex  create__project__command_8hpp__dep__incl.dot  create__project__command_8hpp__incl.dot  exec_8hpp.tex  exec_8hpp__dep__incl.dot  exec_8hpp__incl.dot  files.tex  (+33 more)
documentation/html/: annotated.html  classes.html  dir_0ca02cb2558ea52b22aa0172273e27a8.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_34e9a5f624ac092a9ae2401c28d616d7.html  dir_38b655120b0bde1547bb911ccec4bdfc.html  dir_4d4c17f10dfc67a4e6c52aa126dbc0d5.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_586be7b4fb01bbe1abc5920457985044.html  dir_5e80d29b61c444378a543be4dd1414df.html  dir_5eebd1cb6432961c808578ad90fc8572.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_76a60faa6664d20986db061af27439cd.html  dir_7970e0a69e7b9ede7435da52ce014ca7.html  dir_83b387c5f1ff7207d607a3a497f6baad.html  dir_87da7747190c136fe18df9d5ca0cd133.html  dir_99f35db968e15475c15e13178553db90.html  dir_9bec7083027963d9f9ceae2cc7474de5.html  dir_a2e8c8dc397794e6607df6de8bd255f3.html  dir_a7987eba1c1f2816124004cbde052c6a.html  files.html  (+18 more)
include/: command_base.hpp  file_next.hpp  manager_command.hpp  next.hpp  next_data.hpp  picojson.hpp  stack_command.hpp
src/: build_next.py  clean_next.py  comman_base.rs  command_base.cpp  config_add.py  config_env.py  config_get.py  config_set.py  config_t.py  create_next.py  example.rs  exce_next.py  file_next.cpp  info_next.py  main.cpp  main.py  main.rs  manager_command.cpp  manager_command.rs  next.cpp  next_data.cpp  read_config.py  run_next.py  stack_command.cpp  tools.py  tools_old.py  use_next.py  version_next.py  write_config.py
(+390 files in other folders)
